--- a/styles/styleAbout.css
+++ b/styles/styleAbout.css
@@ -1,40 +1,46 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans&family=Oswald&family=Poppins:wght@300;600&family=Roboto+Slab&family=Roboto:wght@400;500;700&display=swap');
-*{
+
+* {
     padding: 0;
-    margin:0;
-    box-sizing:border-box;
+    margin: 0;
+    box-sizing: border-box;
 }
+
 body {
     line-height: 1.6;
     margin: 0;
     font-family: 'Poppins';
-    background: linear-gradient(to left, rgba(1, 11, 75, 0.4), rgba(5, 1, 66, 0.2)), url('images/NormalBg.jpeg');
+    background: linear-gradient(to left, rgba(1, 11, 75, 0.4), rgba(5, 1, 66, 0.2)), url('/Group17/Images/AboutUs/NormalBg.jpeg');
     background-size: cover;
 
 }
-nav{
+
+nav {
     padding: 30px;
     width: 100%;
     height: 100px;
-    color:white;
+    color: white;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
+
 .logo {
-   font-size: 2rem;
-   letter-spacing: 2px;
-   font-family: inherit;
+    font-size: 2rem;
+    letter-spacing: 2px;
+    font-family: inherit;
 }
-.menu a{
-    color:white;
+
+.menu a {
+    color: white;
     text-decoration: none;
     font-weight: bold;
     padding: 10px 20px;
     position: relative;
 }
-.menu a:before{
-    content:"" ;
+
+.menu a:before {
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
@@ -43,22 +49,26 @@ nav{
     border-bottom: 2px solid darkblue;
     transition: 0.4s linear;
 }
+
 .menu a:hover:before {
     width: 90%;
 }
-.contact-us{
+
+.contact-us {
     background-color: darkblue;
     color: white;
 }
-.Register a{
-    color:white;
+
+.Register a {
+    color: white;
     text-decoration: none;
     font-weight: bold;
     padding: 10px 20px;
     background: darkblue;
     border-radius: 10px;
 }
-.Register a:hover{
+
+.Register a:hover {
     color: darkblue;
     background: white;
     transition: 0.4s linear;
@@ -104,7 +114,7 @@ li {
 
 li:hover {
     transform: scale(1.2);
-    font-weight: bold;    
+    font-weight: bold;
     transition: transform 0.3s ease-in-out;
 }
 
@@ -115,7 +125,8 @@ footer {
     text-align: center;
     margin-top: auto;
 }
-img{
+
+img {
     width: 100px;
     height: 100px;
     border-radius: 10px;
