--- a/styles/styleContact.css
+++ b/styles/styleContact.css
@@ -1,40 +1,45 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans&family=Oswald&family=Poppins:wght@300;600&family=Roboto+Slab&family=Roboto:wght@400;500;700&display=swap');
 
-*{
+* {
     box-sizing: border-box;
- 
+
 }
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background: linear-gradient(to left, rgba(1, 11, 75, 0.4), rgba(5, 1, 66, 0.2)), url('/S.E-Group-17/ContactUs/Images/NormalBg.jpeg');
+    background: linear-gradient(to left, rgba(1, 11, 75, 0.4), rgba(5, 1, 66, 0.2)), url('/Group17/Images/NormalBg.jpeg');
     background-size: cover;
     background-color: #f9f9f9;
     font-family: 'Poppins';
 }
-nav{
+
+nav {
     padding: 30px;
     width: 100%;
     height: 100px;
-    color:white;
+    color: white;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
+
 .logo {
-   font-size: 2rem;
-   letter-spacing: 2px;
+    font-size: 2rem;
+    letter-spacing: 2px;
 }
-.menu a{
-    color:white;
+
+.menu a {
+    color: white;
     text-decoration: none;
     font-weight: bold;
     padding: 10px 20px;
     position: relative;
 }
-.menu a:before{
-    content:"" ;
+
+.menu a:before {
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
@@ -43,22 +48,26 @@ nav{
     border-bottom: 2px solid darkblue;
     transition: 0.4s linear;
 }
+
 .menu a:hover:before {
     width: 90%;
 }
-.contact-us{
+
+.contact-us {
     background-color: darkblue;
     color: white;
 }
-.Register a{
-    color:white;
+
+.Register a {
+    color: white;
     text-decoration: none;
     font-weight: bold;
     padding: 10px 20px;
     background: darkblue;
     border-radius: 10px;
 }
-.Register a:hover{
+
+.Register a:hover {
     color: darkblue;
     background: white;
     transition: 0.4s linear;
@@ -69,23 +78,24 @@ nav{
     margin: 50px auto;
     padding: 20px;
     background-color: lightblue;
-        background: linear-gradient(to right, lightblue, rgba(14, 11, 113, 0.8));
-        background-color: #f9f9f9;
+    background: linear-gradient(to right, lightblue, rgba(14, 11, 113, 0.8));
+    background-color: #f9f9f9;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    
+
 }
 
 h1 {
     text-align: center;
 }
-h1:hover{
+
+h1:hover {
     color: white;
 }
 
 .form-group {
     margin-bottom: 20px;
-    
+
 }
 
 label {
