--- a/styles/styleWe.css
+++ b/styles/styleWe.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background: linear-gradient(to left, rgba(1, 11, 75, 0.4), rgba(5, 1, 66, 0.2)), url('/S.E-Group-17/Werecommend/Images/NormalBg.jpeg');
+    background: linear-gradient(to left, rgba(1, 11, 75, 0.4), rgba(5, 1, 66, 0.2)), url('/Group17/Images/NormalBg.jpeg');
     background-size: cover;
     font-family: "Poppins";
     margin: 0;
@@ -54,11 +54,13 @@ body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
 }
+
 .content :hover {
     box-shadow: 0 10px 10px gray;
     transition: 0.4s ease-in-out;
 
 }
+
 .service-item strong {
     color: darkblue;
     font-size: 18px;
