--- a/styles/styleAbout.css
+++ b/styles/styleAbout.css
@@ -14,7 +14,13 @@ body {
     background-size: cover;
 
 }
-
+.logo img {
+    margin: 0;
+    padding: 0;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+}
 nav {
     padding: 30px;
     width: 100%;
