--- a/styles/styleContact.css
+++ b/styles/styleContact.css
@@ -14,6 +14,13 @@ body {
     background-color: #f9f9f9;
     font-family: 'Poppins';
 }
+.logo img {
+    margin: 0;
+    padding: 0;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+}
 
 nav {
     padding: 30px;
