--- a/styles/styleDoctor.css
+++ b/styles/styleDoctor.css
@@ -21,7 +21,13 @@ body {
     max-width: 500px;
     margin: 0 auto;
 }
-
+.logo img {
+    margin: 0;
+    padding: 0;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+}
 nav {
     padding: 30px;
     width: 100%;
