--- a/styles/styleMain.css
+++ b/styles/styleMain.css
@@ -28,6 +28,13 @@ nav {
     font-size: 2rem;
     letter-spacing: 2px;
 }
+.logo img {
+    margin: 0;
+    padding: 0;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+}
 
 .menu a {
     color: white;
