--- a/styles/styleWe.css
+++ b/styles/styleWe.css
@@ -13,7 +13,13 @@ body {
     margin: 0;
     padding: 0;
 }
-
+.logo img {
+    margin: 0;
+    padding: 0;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+}
 .container {
     max-width: 800px;
     margin: 20px auto;
