--- a/styles/styleMain.css
+++ b/styles/styleMain.css
@@ -9,7 +9,7 @@
 header {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(rgba(1, 75, 69, 0.4), rgba(1, 66, 48, 0.2)), url('/Group17/Images/Mainpg.jpeg');
+    background: linear-gradient(rgba(1, 75, 69, 0.4), rgba(1, 66, 48, 0.2)), url('../Images/Mainpg.jpeg');
     background-size: cover;
     font-family: Poppins;
 }
